docroot/themes/custom/non_transac/victoria_secret/sass/01-molecules/07-forms/form-element-textual/_form-element-textual.ltr.scss
.mobile-number-field {
  width: 100%;

  .mobile-input--wrapper {
    position: relative;

    .input--textual__container--errors {
      position: absolute;
      bottom: -0.2rem;

      @include breakpoint($upto-palm) {
        bottom: -1rem;
      }
    }
  }
}

html[dir=rtl] {
  .mobile-number-field {
    .mobile-input--wrapper {
      width: 50%;

      @include breakpoint($upto-palm) {
        width: 55%;
      }

      .input--textual__container--errors {
        @include breakpoint($upto-palm) {
          bottom: -0.2rem;
        }
      }
    }
  }
}

.mobile-number-field {
  + div {
    position: relative;

    .input--textual__container--errors {
      position: absolute;
      top: 2.2rem;
    }
  }
}

html[dir=rtl] {
  .mobile-input--wrapper {
    .form-item-mobile-number-mobile {
      label {
        #{direction(right)}: -2.875rem;
      }
    }
  }
}

